--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,12 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+    background-color:grey;
+    color: green;
+}
+
+.card {
+    justify-content: center;
+    font-size:2rem;
+}
